JastAddExtensions/NonNullChecker/test/Test01.result
Errors:
test/Test01.java:10:
  Semantic Error: only reference typed values may be non null
test/Test01.java:13:
  Semantic Error: only reference typed values may be non null
test/Test01.java:20:
  Semantic Error: only reference typed values may be non null
test/Test01.java:23:
  Semantic Error: only reference typed values may be non null
